# rules_ocx

./: .bazelrc  .gitattributes  .gitignore  .licenserc.toml  .mcp.json  AGENTS.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  SECURITY.md  cliff.toml  ocx.toml  renovate.json  taskfile.yml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.claude/: settings.json
.claude/hooks/: conventional_commit_validator.py  hook_utils.py  pre_push_main_blocker.py
.claude/rules/: dist-snapshot.md  release.md  starlark.md
.github/workflows/: ci.yml  pages.yml  publish.yaml  release.yml  update-dist.yml
docs/: BUILD.bazel  _config.yml  defs.md  extensions.md  index.md
e2e/bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/cross_platform/: BUILD.bazel  MODULE.bazel  abi_test.sh  transition.bzl
examples/cross_platform/index/ocx.sh/: jq.json
examples/package/: BUILD.bazel  MODULE.bazel  data.json  jq_test.sh
examples/project/: .bazelrc  BUILD.bazel  MODULE.bazel  cross_env_test.sh  ocx.toml  smelly.sh  tools_test.sh
ocx/: BUILD.bazel  defs.bzl  extensions.bzl
ocx/private/: BUILD.bazel  download.bzl  manifest.bzl  package.bzl  platforms.bzl  project.bzl  repo_utils.bzl  versions.bzl
ocx/tests/: BUILD.bazel  dev_tools_test.sh  launcher_test.bzl  manifest_test.bzl  ocx_tool_test.sh  package_test.bzl  platforms_test.bzl
