# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The OCX Authors

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = ["//ocx/private"],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = ["//ocx/private"],
)
