# The @jq hub select()s the per-platform package repo matching the target
# platform; platform_filegroup transitions it, so one build fetches jq for
# foreign platforms — the PR #12 ABI-assertion pattern.

load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":transition.bzl", "platform_filegroup")

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

platform(
    name = "windows_amd64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

platform_filegroup(
    name = "jq_linux_arm64",
    srcs = ["@jq//:content"],
    target_platform = ":linux_arm64",
)

platform_filegroup(
    name = "jq_windows_amd64",
    srcs = ["@jq//:content"],
    target_platform = ":windows_amd64",
)

sh_test(
    name = "abi_test",
    size = "small",
    srcs = ["abi_test.sh"],
    data = [
        ":jq_linux_arm64",
        ":jq_windows_amd64",
    ],
    env = {
        "JQ_LINUX_ARM64": "$(locations :jq_linux_arm64)",
        "JQ_WINDOWS_AMD64": "$(locations :jq_windows_amd64)",
    },
    # `file -b` assertions need a Linux runner.
    target_compatible_with = ["@platforms//os:linux"],
)
