"""Example: per-platform package repos + a hub select()ed by target platform."""

module(name = "rules_ocx_example_cross_platform")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_ocx", version = "0.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

local_path_override(
    module_name = "rules_ocx",
    path = "../..",
)

ocx = use_extension("@rules_ocx//ocx:extensions.bzl", "ocx")

# ':latest' resolves frozen from the committed index snapshot in index/ —
# every platform repo sees the same resolution. Refresh with
# `ocx --index index index update ocx.sh/jq` and commit.
ocx.package(
    name = "jq",
    index = "//:index",
    package = "ocx.sh/jq:latest",
    # The arm64 target accepts amd64 as a fallback tier (e.g. under qemu).
    # The snapshot carries an arm64 leaf, so tier 1 matches and the resolved
    # content stays arm64 — the abi_test below still asserts arm64 ABI.
    platform_fallbacks = {
        "linux/arm64": [
            "linux/arm64",
            "linux/amd64",
        ],
    },
    platforms = [
        "linux/amd64",
        "linux/arm64",
        "windows/amd64",
    ],
)
use_repo(ocx, "jq")
