"""Example: ad-hoc OCX packages via ocx.package()."""

module(name = "rules_ocx_example_package")

bazel_dep(name = "rules_ocx", version = "0.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

local_path_override(
    module_name = "rules_ocx",
    path = "../..",
)

ocx = use_extension("@rules_ocx//ocx:extensions.bzl", "ocx")

# Floating tag: resolves at fetch time; the fetch log prints the digest to pin.
ocx.package(
    name = "jq",
    package = "ocx.sh/jq:latest",
)

# Digest-pinned: fully reproducible. OCX pins *per-platform* manifest
# digests (indices move when a platform is added and may be GC'd);
# `ocx package install -p <platform> ocx.sh/jq:latest` reports each digest.
# Platforms without a pin fall back to `package`.
ocx.package(
    name = "jq_pinned",
    package = "ocx.sh/jq:latest",
    pins = {
        "darwin/arm64": "sha256:5be7552a463835dead65ca4c858ebc10703a0d9cff7308967f04d08fa8e2da1a",
        "linux/amd64": "sha256:11814b34158ab143969a8efffe59a320dd07c0b176a65366427514b326e2a347",
        "windows/amd64": "sha256:8434027cf0a6c340a10e533ecdfd8137f085e476437352b98237294adf821c7d",
    },
)
use_repo(ocx, "jq", "jq_pinned")
