# Every tool from ocx.toml is a runnable target in @tools. The PR #12 usage
# pattern: shell tooling composed in a genrule report plus an sh_test.

load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@tools_arm64//:env.bzl", ARM64_ENV = "OCX_ENV")

genrule(
    name = "shell_report",
    srcs = ["smelly.sh"],
    outs = ["shell_report.txt"],
    cmd = "echo shfmt: > $@ && (($(location @tools//:shfmt) -d $< 2>> $@) || true) && " +
          "echo shellcheck: >> $@ && (($(location @tools//:shellcheck) $< >> $@) || true)",
    tools = [
        "@tools//:shellcheck",
        "@tools//:shfmt",
    ],
)

sh_test(
    name = "tools_test",
    size = "small",
    srcs = ["tools_test.sh"],
    data = [
        ":shell_report",
        "@tools//:shellcheck",
        "@tools//:shfmt",
        "@tools_lazy//:shellcheck",
    ],
    env = {
        "REPORT": "$(location :shell_report)",
        "SHELLCHECK_BIN": "$(location @tools//:shellcheck)",
        "SHELLCHECK_LAZY_BIN": "$(location @tools_lazy//:shellcheck)",
        "SHFMT_BIN": "$(location @tools//:shfmt)",
    },
)

# @tools_arm64 composed with platform = "linux/arm64": its env paths point at
# the arm64 leaves in the store, pulled from the same ocx.lock on any host.
sh_test(
    name = "cross_env_test",
    size = "small",
    srcs = ["cross_env_test.sh"],
    env = {
        "ARM64_PATH_DIRS": " ".join([e["value"] for e in ARM64_ENV if e["type"] == "path"]),
    },
    # The `file -b` ABI assertion needs a Linux runner.
    target_compatible_with = ["@platforms//os:linux"],
)
