"""Example (flagship): workspace toolchain from ocx.toml + ocx.lock."""

module(name = "rules_ocx_example_project")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_ocx", version = "0.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

local_path_override(
    module_name = "rules_ocx",
    path = "../..",
)

ocx = use_extension("@rules_ocx//ocx:extensions.bzl", "ocx")
ocx.project(
    name = "tools",
    ocx_lock = "//:ocx.lock",
    ocx_toml = "//:ocx.toml",
)

# Lazy variant: nothing is pulled at fetch time — each bin is a launcher
# re-entering `ocx run`, materializing the toolchain on first execution.
# Fully remote-cached builds download no tool content at all.
ocx.project(
    name = "tools_lazy",
    bins = [
        "shellcheck",
        "shfmt",
    ],
    ocx_lock = "//:ocx.lock",
    ocx_toml = "//:ocx.toml",
)

# Cross-platform variant: composes the linux/arm64 environment from the same
# ocx.lock — env.bzl holds the absolute store paths of the arm64 leaves. No
# runnable launchers (the binaries do not run on this host).
ocx.project(
    name = "tools_arm64",
    ocx_lock = "//:ocx.lock",
    ocx_toml = "//:ocx.toml",
    platform = "linux/arm64",
)
use_repo(ocx, "tools", "tools_arm64", "tools_lazy")
